[#103594184] Fixed remaining UI issues to align page with mock-up

--- a/eums/client/less/dashboard.less
+++ b/eums/client/less/dashboard.less
@@ -294,7 +294,7 @@ div[class*="-aggregate-marker-icon"] div {
 }
 
 .border-none {
-  border: 0;
+  border: 0 !important;
 }
 
 .leaflet-container {
