--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -227,7 +227,7 @@ h4.page-header {
 }
 
 .pad-15 {
-  padding: 15px;
+  padding: 15px !important;
 }
 
 .pad-10 {
